--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+
+      "homepage": "https://github.com/The-V0id-stack/restobar-landing.git",
+
       "scripts": {
             "start": "react-scripts start",
             "build": "react-scripts build",
             "test": "react-scripts test",
-            "eject": "react-scripts eject"
+            "eject": "react-scripts eject",
+            "predeploy": "npm run build",
+            "deploy": "gh-pages -d build"
+
       },
       "dependencies": {
             "autoprefixer": "^10.0.0",
@@ -28,5 +34,8 @@
                   "last 1 firefox version",
                   "last 1 safari version"
             ]
+      },
+      "devDependencies": {
+            "gh-pages": "^6.3.0"
       }
 }
